--- a/src/package.json
+++ b/src/package.json
@@ -12,7 +12,10 @@
   "private": true,
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-sass": "^2.2.0"
+    "gulp-concat": "^2.6.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.5.3"
   },
   "dependencies": {
     "jquery": "^2.2.1",
