--- a/src/package.json
+++ b/src/package.json
@@ -13,11 +13,11 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
-    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3"
   },
   "dependencies": {
+    "angular": "^1.5.0",
     "jquery": "^2.2.1",
     "snapsvg": "^0.4.0"
   }
